--- a/Spring/mvc/src/main/resources/application.properties
+++ b/Spring/mvc/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9090
+spring.mvc.view.prefix=/WEB-INF/
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/mvc_db
@@ -8,3 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
